@@ -152,8 +152,9 @@
                 <artifactId>maven-compiler-plugin</artifactId>
                 <version>3.10.1</version>
                 <configuration>
-                    <target>18</target>
-                    <source>18</source>
+                    <target>20</target>
+                    <source>20</source>
+                    <compilerArgs>--enable-preview</compilerArgs>
                 </configuration>
             </plugin>
 
